# claude-chats

./: LICENSE  README.md  docker-compose.yml  init.sql  install.sh
hook/: pyproject.toml
hook/hook/: record.py
mcp/: pyproject.toml
mcp/conversation_memory_mcp/: embed.py  server.py
