[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-chats-hook"
version = "0.1.0"
description = "Claude Code Stop hook — records conversation messages to PostgreSQL with Ollama embeddings"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "boto3>=1.35.0",
    "openai>=1.0.0",
]

[project.scripts]
record-conversation = "hook.record:main"

[tool.hatch.build.targets.wheel]
packages = ["hook"]
