[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-memory-mcp"
version = "0.1.0"
description = "MCP server — semantic search and retrieval of recorded Claude Code conversations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
]

[project.scripts]
conversation-memory-mcp = "conversation_memory_mcp.server:main"
